--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
 <div class="container">
- <div class="card-white" id="introduction">
+<div class="card-white" id="introduction">
    <h1>
-	Hi,i'm Nadim🧑🏻‍🦱
+	Hi,i'm JOHN🧑🏻‍🦱
 
    </h1>
   <img src="images/profile.jpg" class="img-circle" alt="nadim Belhaj">
